<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">USTH Weather</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello">Hello</string>
    <string name="thursday">Thursday</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_layout_description">Tab Layout</string>
    <string name="weather_info">20C\nRainy</string>
    <string name="place_name">Hanoi</string>
    <string name="Mon">Mon</string>
    <string name="Partly_Cloudy">Partly Cloudy</string>
    <string name="Tue">Tue</string>
    <string name="Showers">Showers</string>
    <string name="Wed">Wed</string>
    <string name="Rain">Rain</string>
    <string name="Thu">Thu</string>
    <string name="Scattered_Showers">Scattered Showers</string>
    <string name="Fri">Fri</string>
    <string name="Mostly_Cloudy">Mostly Cloudy</string>
    <string name="Sat">Sat</string>
    <string name="Thunderstorms">Thunderstorms</string>
    <string name="Sun">Sun</string>
</resources>
